# Fortis-AI-

./: .gitignore  Dockerfile  Procfile  README.md  requirements.txt
backend/: Dockerfile  Procfile  requirements.txt
backend/data/: market_ticks_5000.csv
backend/fortis_project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/governance/: apps.py  odra_bridge.py  token_issuer.py
backend/risk_engine/: __init__.py  analyzer.py  apps.py  data_loader.py
backend/security_scanner/: __init__.py  apps.py  contract_auditor.py  network_scanner.py
backend/storefront/: apps.py  middleware.py  models.py  tests.py  urls.py  views.py
backend/storefront/migrations/: 0001_initial.py
backend/storefront/static/css/: index.css
backend/storefront/static/js/: dashboard.js
backend/storefront/templates/: base.html  billing.html  dashboard.html  feed.html  history.html  landing.html  login.html  playground.html  settings.html  support.html
odra_contract/: Cargo.toml  Odra.toml
odra_contract/src/: lib.rs
scripts/: generate_tick_data.py  setup_env.ps1  simulate_agent.py
