[package]
name = "fortis_governance_log"
version = "0.1.0"
edition = "2021"
description = "Immutable On-Chain Governance Log for Fortis AI on Casper Testnet"

[dependencies]
odra = { version = "1.1.0", features = ["casper"] }
odra-modules = { version = "1.1.0" }

[build-dependencies]
odra-build = "1.1.0"

[[bin]]
name = "fortis_governance_log_build"
path = "src/main.rs"
doc = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
